--- a/css/style.css
+++ b/css/style.css
@@ -436,25 +436,46 @@ hr{
 	}
 }
 
-.map_container{
+/* .map_container{ */
+/*     position: relative; */
+/*     width: 100%; */
+/*     padding-bottom: 56.25%; /\* Ratio 16:9 ( 100%/16*9 = 56.25% ) *\/ */
+/* } */
+/* .map_container .map_canvas{ */
+/*     position: absolute; */
+/*     top: 0; */
+/*     right: 0; */
+/*     bottom: 0; */
+/*     left: 0; */
+/*     margin: 0; */
+/*     padding: 0; */
+/* } */
+
+/* /\* Demo styles *\/ */
+/* body{ */
+/*     padding: 10%; */
+/* } */
+/* .map_container .map_canvas{ */
+/*     background: #ccc; */
+/* } */
+
+
+/* Flexible iFrame */
+
+.Flexible-container {
     position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; /* Ratio 16:9 ( 100%/16*9 = 56.25% ) */
-}
-.map_container .map_canvas{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
 }
 
-/* Demo styles */
-body{
-    padding: 10%;
-}
-.map_container .map_canvas{
-    background: #ccc;
+.Flexible-container iframe,   
+.Flexible-container object,  
+.Flexible-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
